# mailutils

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  COPYING  COPYING.LESSER  ChangeLog  ChangeLog.0.5  ChangeLog.amend  Makefile.am  Makefile.in  NEWS  README  README-alpha  README-hacking  THANKS  TODO  acconfig.h  aclocal.m4  autogen.sh  bootstrap  bootstrap.conf  changelog.pl  config.h.in  config.h.in~  configure  configure.ac  configure.in  direntry  git-describe  gnulib.modules  mailutils.spec.in  maint.mk  paths
argp/: Makefile.am  argp-fmtstream.c  argp-fmtstream.h  argp-help.c  argp-parse.c  argp-xinl.c  argp.h  pin.c
auth/: Makefile.am  gsasl.c  lbuf.c  lbuf.h  ldap.c  mysql.c  pam.c  pgsql.c  radius.c  sql.c  sql.h  system.c  tls.c  virtual.c
comsat/: .cvsignore  .gitignore  Makefile.am  Makefile.in  action.c  biff.rc  biff.rc.h  biffrc.sed  cfg.c  comsat.c  comsat.h  oldcfg.c
config/: .cvsignore  Makefile.am  mailutils-config.c  mailutils.m4  maint.mk
doc/: .cvsignore  Makefile.am  Makefile.in  Readme.mysql  address.texi  attribute.texi  auth.texi  body.texi  c-api.texi  encoding.texi  envelope.texi  ex-url.texi  folder.texi  framework.texi  headers.texi  imap4.texi  iterator.texi  locker.texi  mailbox.texi  maildir.texi  mailer.texi  mailutils.texi  mbox.texi  message.texi  mh.texi  mime.texi  nntp.texi  parse822.texi  pop3.texi  programs.texi  sendmail.texi  sfrom.c.texi  smtp.texi  stream.texi  url.texi  version.texi  xml2texi.rb
dotlock/: .cvsignore  .gitignore  Makefile.am  Makefile.in  dotlock.c
examples/: .cvsignore  .gitignore  Addrs  Addrs.good  Makefile  Makefile.am  Makefile.in  Urls  Urls.good  aclck.c  addr.c  argcv.c  base64.c  comsat.conf  decode2047.c  echosrv.c  encode2047.c  from.c  header.c  http.c  iconv.c  list.c  listop.c  lsf.c  mail.MysqlMailer.c  mailcap.c  mailutils.rc  mblconv.c  mbox-check.c  mbox-dates.c  mbox-explode.c  mboxidx.c  mimetest.c  msg-send.c  mta.c  muauth.c  mucat.c  muemail.c  murun.c  musocio.c  (+11 more)
frm/: .cvsignore  Makefile.am  Makefile.in  common.c  frm.c  frm.h  from.c
guimb/: .cvsignore  .gitignore  Makefile.am  collect.c  guimb.h  main.c  run_scm.c  util.c
imap4d/: .cvsignore  .gitignore  Makefile.am  Makefile.in  TODO  append.c  auth_gsasl.c  auth_gss.c  authenticate.c  bye.c  capability.c  capability.h  check.c  close.c  command.c  command.h  commands.c  copy.c  create.c  delete.c  examine.c  expunge.c  fetch.c  id.c  idle.c  imap.h  imap4d.c  imap4d.h  imap_commands.h  imap_types.h  io.c  list.c  login.c  login.h  logout.c  logout.h  lsub.c  main.c  namespace.c  noop.c  (+19 more)
lib/: .cvsignore  .gitignore  Makefile.am  Makefile.in  allocsa.c  allocsa.h  argcv.c  argcv.h  argp-fmtstream.h  argp-help.c  argp_base.c  argpinit.c  asprintf.c  basename.c  daemon.c  des.c  des.h  error.c  error.h  exit.h  exitfail.c  exitfail.h  fgetpwent.c  fnmatch.c  fnmatch_.h  fnmatch_loop.c  fseek.c  fstat.c  getline.c  getopt.c  getopt.h  getopt1.c  getpass.c  getpass.h  gnulib.mk  guile.c  intprops.h  mailcap.c  manlock.c  mbswidth.c  (+49 more)
libargp/: Makefile.am  auth.c  cmdline.c  cmdline.h  common.c  compat.c  gsasl.c  mu_argp.c  muinit.c  pam.c  radius.c  sieve.c  sql.c  tls.c  virtdomain.c
libmailbox/: Makefile.am  mailbox.c  mailbox.h  maildir.c  maildir.h  mh.c  mh.h  unixmbox.c  unixmbox.h
libmailutils/: .gitignore  Makefile.am  Makefile.in  amd.c  base64.c  body.c  cfg_driver.c  cfg_parser.y  dbgstream.c  debug.c  errors  file_stream.c  filter.c  filter_iconv.c  fltstream.c  fromflt.c  header.c  iostream.c  linelenflt.c  list.c  locker.c  mailbox.c  mailcap.c  mailer.c  mapfile_stream.c  mbxitr.c  memory_stream.c  message.c  message_stream.c  mimehdr.c  monitor.c  mutil.c  prog_stream.c  property.c  rdcache_stream.c  socket_stream.c  stdio_stream.c  stream.c  stream_vprintf.c  streamcpy.c  (+7 more)
libmu_argp/: Makefile.am  Makefile.in  auth.c  cmdline.c  cmdline.h  common.c  compat.c  gsasl.c  mailutils.c  mu_argp.c  mu_argp.h  muinit.c  pam.c  radius.c  sieve.c  sql.c  tls.c  virtdomain.c
libmu_auth/: Makefile.am  Makefile.in  gsasl.c  lbuf.h  ldap.c  pam.c  radius.c  sql.c  sql.h  tls.c  virtual.c
libmu_cpp/: .gitignore  Makefile.am  Makefile.in  address.cc  attribute.cc  body.cc  debug.cc  envelope.cc  filter.cc  folder.cc  header.cc  iterator.cc  list.cc  mailbox.cc  mailcap.cc  mailer.cc  message.cc  mime.cc  mutil.cc  pop3.cc  registrar.cc  secret.cc  sieve.cc  stream.cc  url.cc
libmu_dbm/: Makefile.am  Makefile.in  berkeley.c  close.c  create.c  datumfree.c  dbm.c  delete.c  destroy.c  errstr.c  fetch.c  firstkey.c  gdbm.c  getfd.c  kyoto.c  mudbm.h  name.c  ndbm.c  nextkey.c  open.c  safety.c  store.c  tokyo.c
libmu_scm/: .cvsignore  Makefile.am  Makefile.in  mailutils.scm.in  mu_address.c  mu_body.c  mu_dbgport.c  mu_debug.c  mu_guile.c  mu_guimb.c  mu_logger.c  mu_mailbox.c  mu_message.c  mu_mime.c  mu_port.c  mu_scm.c  mu_scm.h  mu_util.c
libproto/: .cvsignore  Makefile.am  Makefile.in
libsieve/: .cvsignore  .gitignore  Makefile.am  README  actions.c  argp.c  comparator.c  conf.c  load.c  prog.c  register.c  relational.c  require.c  runtime.c  sieve.h  sieve.l  sieve.y  sv.c  tests.c  util.c
m4/: .cvsignore  .gitignore  Makefile.am  argp.m4  db2.m4  debug.m4  enable.m4  error.m4  fnmatch.m4  fseek.m4  fseeko.m4  fstat.m4  getdelim.m4  getline.m4  getlogin_r.m4  getndelim2.m4  getopt.m4  getpass.m4  gettext.m4  glob.m4  gnulib-cache.m4  gnulib-comp.m4  gnulib-tool.m4  gnulib.m4  gsasl.m4  gssapi.m4  guile.m4  intl.m4  intldir.m4  intmax.m4  inttostr.m4  inttypes-pri.m4  lib.m4  lseek.m4  maintain.m4  math_h.m4  mbchar.m4  md5.m4  memchr.m4  mempcpy.m4  (+29 more)
maidag/: .cvsignore  Makefile.am  Makefile.in  deliver.c  forward.c  guile.c  lmtp.c  maidag.c  maidag.h  mailquota.c  mailtmp.c  python.c  script.c  sieve.c  util.c
mail/: .cvsignore  Makefile.am  Makefile.in  alias.c  alt.c  bang.c  cd.c  copy.c  decode.c  delete.c  discard.c  dp.c  echo.c  edit.c  eq.c  (+55 more)
mail.local/: .cvsignore  .gitignore  Makefile.am  mail.local.h  mailquota.c  main.c  script.c
mail.remote/: .cvsignore  Makefile.am  mail.remote.c
(+2647 files in other folders)
